# cppTemplate

./: .clang-format  CMakeLists.txt  README.md
src/: main.cc
